--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<lombok.version>1.18.8</lombok.version>
 		<junit.version>3.8.1</junit.version>
 		<dinject.version>1.11</dinject.version>
+		<gson.version>2.8.5</gson.version>
 	</properties>
 
 	<dependencies>
@@ -56,6 +57,11 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
 		</dependency>
 	</dependencies>
 
